Fix wrapping issue

--- a/src/client/routes/Oversikt/Oversikt.less
+++ b/src/client/routes/Oversikt/Oversikt.less
@@ -20,6 +20,7 @@
         line-height: 1.375rem;
         padding-left: 1rem;
         padding-right: 1rem;
+        white-space: nowrap;
       }
 
       p:last-child {
